frontends/firrtl/tests/bad/input_stmt_input.fir
circuit MyCircuit:
    module MyModule:
        input a: UInt
        skip
        input b: UInt
